--- a/template/template.html
+++ b/template/template.html
@@ -19,6 +19,7 @@
 		.page-content {
 			transform: scale(0.8);
 			transform-origin: top;
+			margin-top: 20px;
 		}
 
 		body {
@@ -38,7 +39,7 @@
 			<div style="clear:both">
 
 				<p
-					style="margin-top:0pt; margin-bottom:0pt; text-align:center; line-height:normal; border-top:0.75pt dotted #750a3c; border-bottom:0.75pt dotted #750a3c; padding-top:1pt; padding-bottom:6pt; font-size:36pt">
+					style="margin-top:20pt; margin-bottom:0pt; text-align:center; line-height:normal; border-top:0.75pt dotted #750a3c; border-bottom:0.75pt dotted #750a3c; padding-top:1pt; padding-bottom:6pt; font-size:36pt">
 					<strong><em><span style="font-family:Cambria; letter-spacing:0.5pt; color:#750a3c">ZING
 								ENTERPRISES</span></em></strong>
 				</p>
