--- a/template/template.html
+++ b/template/template.html
@@ -110,7 +110,7 @@
 			<table cellspacing="0" cellpadding="0" style="margin-right:auto; margin-left:auto;">
 				<tr>
 					<td colspan="3"
-						style="width:273.3pt; border-right-style:solid; border-right-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:273.3pt; border-right-style:solid; border-right-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt;">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
 							<em><u><span style="font-family:Arial; ">Debit To :</span></u></em>
 						</p>
@@ -126,7 +126,7 @@
 						</p>
 					</td>
 					<td colspan="3"
-						style="width:200.3pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:200.3pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt;">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
 							<span style="font-family:Arial; background-color:#ffffff">&#xa0;</span><span
 								style="font-family:Arial; background-color:#ffffff">No: {{invoiceNumber}}</span>
@@ -147,37 +147,37 @@
 				</tr>
 				<tr>
 					<td
-						style="width:24.8pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:24.8pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt;">
 						<p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt">
 							<span style="background-color:#ffffff">S No</span>
 						</p>
 					</td>
 					<td
-						style="width:171.15pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:171.15pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt">
 							<span style="background-color:#ffffff">Description</span>
 						</p>
 					</td>
 					<td
-						style="width:55.75pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:55.75pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
 							<span style="background-color:#ffffff">HSN/SAC </span>
 						</p>
 					</td>
 					<td
-						style="width:29.15pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:29.15pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt">
 							<span style="background-color:#ffffff">QTY.</span>
 						</p>
 					</td>
 					<td
-						style="width:58.9pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:58.9pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; text-align:center; font-size:12pt">
 							<span style="background-color:#ffffff">Rate (INR)</span>
 						</p>
 					</td>
 					<td
-						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
 							<span style="background-color:#ffffff">AMOUNT (INR)</span>
 						</p>
@@ -214,7 +214,7 @@
 
 				<tr style="height:21.75pt">
 					<td colspan="2" rowspan="5"
-						style="width:206.75pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:206.75pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:10pt">
 							<span style="font-family:Arial; background-color:#ffffff">Bank Details</span>
 						</p>
@@ -238,39 +238,38 @@
 						</p>
 					</td>
 					<td rowspan="5"
-						style="width:55.75pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:55.75pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
 							<strong><span style="font-family:Arial; ">&#xa0;</span></strong>
 						</p>
 					</td>
 					<td colspan="2"
-						style="width:98.85pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
-						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
+						style="width:98.85pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
+						<p style="margin: auto; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">Total</span></strong>
 						</p>
 					</td>
 					<td
-						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
-						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
+						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
+						<p style="margin: auto; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">{{total}}
 								</span></strong>
 						</p>
 					</td>
 				</tr>
-				<tr style="height:18pt">
+				<tr>
 					<td colspan="2"
-						style="width:98.85pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
-						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
+						style="width:98.85pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
+						<p style="margin: auto; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">CGST-
-									{{cgstPerc}}</span></strong><strong><span
+									{{cgstPerc}} %</span></strong><strong><span
 									style="font-family:Arial; background-color:#ffffff">&#xa0;
-								</span></strong><strong><span
-									style="font-family:Arial; background-color:#ffffff"></span></strong>
+								</span></strong>
 						</p>
 					</td>
 					<td
-						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
-						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
+						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
+						<p style="margin: auto; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">{{cgst}}
 								</span></strong>
 						</p>
@@ -278,29 +277,29 @@
 				</tr>
 				<tr style="height:18pt">
 					<td colspan="2"
-						style="width:98.85pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
-						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
+						style="width:98.85pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
+						<p style="margin: auto; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">SGST -
-									{{sgstPerc}}</span></strong>
+									{{sgstPerc}} %</span></strong>
 						</p>
 					</td>
 					<td
-						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
-						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
+						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
+						<p style="margin: auto; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">{{sgst}}</span></strong>
 						</p>
 					</td>
 				</tr>
 				<tr style="height:18.75pt">
 					<td colspan="2"
-						style="width:98.85pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:98.85pt; border-style:solid; border-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">IGST
-									-{{igstPerc}}</span></strong><strong>
+									-{{igstPerc}} %</span></strong><strong>
 						</p>
 					</td>
 					<td
-						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; border-bottom-style:solid; border-bottom-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">{{igst}}
 								</span></strong>
@@ -309,14 +308,14 @@
 				</tr>
 				<tr style="height:29.45pt">
 					<td colspan="2"
-						style="width:98.85pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:98.85pt; border-top-style:solid; border-top-width:0.75pt; border-right-style:solid; border-right-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">Grand
 									Total</span></strong>
 						</p>
 					</td>
 					<td
-						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; vertical-align:top">
+						style="width:90.65pt; border-top-style:solid; border-top-width:0.75pt; border-left-style:solid; border-left-width:0.75pt; padding-right:5.03pt; padding-left:5.03pt; ">
 						<p style="margin-top:0pt; margin-bottom:0pt; font-size:12pt">
 							<strong><span style="font-family:Arial; background-color:#ffffff">{{grandTotal}}
 								</span></strong>
@@ -329,7 +328,7 @@
 		<p style="margin-top:5pt;line-height:normal">
 			<strong><span style="font-family:Arial; background-color:#ffffff">AMOUNT (</span></strong><span
 				style="font-family:Arial; background-color:#ffffff">in words)-
-				{{grandTotalInWords}}</span><strong><span
+				<strong style="font-family:Arial; background-color:#ffffff">INR</strong> {{grandTotalInWords}} </span><strong><span
 					style="font-family:Arial; background-color:#ffffff">Only.</span></strong>
 		</p>
 	
