--- a/template/template.html
+++ b/template/template.html
@@ -8,6 +8,7 @@
     height: 10pt; /* Set the height of the row */
     font-size: 12pt; /* Set the font size */
 	padding: 1px;
+	text-align:center; 
 		}
 
 		table {
